--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ minecraft {
 }
 
 dependencies {
+    compile 'org.json:json:20180813'
+
+
     // you may put jars on which you depend on in ./libs
     // or you may define them like so..
     //compile "some.group:artifact:version:classifier"
